--- a/compton.conf
+++ b/compton.conf
@@ -5,8 +5,8 @@
 # Backend to use: "xrender" or "glx".
 # GLX backend is typically much faster but depends on a sane driver.
 
-#backend = "glx";
-backend = "xrender";
+backend = "glx";
+#backend = "xrender";
 
 
 ####################################
@@ -60,7 +60,7 @@ glx-swap-method = "undefined";
 shadow = false;							# Enabled client-side shadows on windows.
 no-dnd-shadow = true;					# Don't draw shadows on DND windows.
 no-dock-shadow = true;					# Avoid drawing shadows on dock/panel windows.
-clear-shadow = true;					# Zero the part of the shadow's mask behind the
+# clear-shadow = true;	# Not an option anymore				# Zero the part of the shadow's mask behind the
 										# window. Fix some weirdness with ARGB windows.
 shadow-radius = 7;						# The blur radius for shadows. (default 12)
 shadow-offset-x = -7;					# The left offset for shadows. (default -15)
@@ -90,7 +90,7 @@ shadow-ignore-shaped = true;			# Avoid drawing shadow on all shaped windows
 ####################################
 #######       Opacity       ########
 ####################################
-#menu-opacity = 0.9;						# The opacity for menus. (default 1.0)
+# menu-opacity = 0.9;						# The opacity for menus. (default 1.0)
 # inactive-opacity = 0.7;					# Default opacity of inactive windows. (0.0 - 1.0)
 # active-opacity = 0.9;					# Default opacity for active windows. (0.0 - 1.0)
 # frame-opacity = 0.9;					# Opacity of window titlebars and borders. (0.1 - 1.0)
@@ -99,8 +99,8 @@ shadow-ignore-shaped = true;			# Avoid drawing shadow on all shaped windows
 alpha-step = 0.06;						# XRender backend: Step size for alpha pictures. Increasing
 										# it may result in less X resource usage,
 										# Yet fading may look bad.
-# inactive-dim = 0.2;					# Dim inactive windows. (0.0 - 1.0)
-# inactive-dim-fixed = true;			# Do not let dimness adjust based on window opacity.
+inactive-dim = 0.3;					# Dim inactive windows. (0.0 - 1.0)
+inactive-dim-fixed = true;			# Do not let dimness adjust based on window opacity.
 # blur-background = true;				# Blur background of transparent windows.
 										# Bad performance with X Render backend.
 										# GLX backend is an alternative.
@@ -157,7 +157,7 @@ refresh-rate = 0;						# For --sw-opti: Specify refresh rate of the screen. 0 fo
 vsync = "none";							# "none", "drm", "opengl", "opengl-oml", "opengl-swc", "opengl-mswc"
 										# See man page for more details.
 dbe = false;							# Enable DBE painting mode. Rarely needed.
-paint-on-overlay = false;				# Painting on X Composite overlay window. Recommended.
+# paint-on-overlay = false;	# not at option anymore			# Painting on X Composite overlay window. Recommended.
 sw-opti = false;						# Limit compton to repaint at most once every 1 / refresh_rate.
 										# Incompatible with certain VSync methods.
 unredir-if-possible = false;			# Unredirect all windows if a full-screen opaque window is
