--- a/compton.conf
+++ b/compton.conf
@@ -99,7 +99,7 @@ shadow-ignore-shaped = true;			# Avoid drawing shadow on all shaped windows
 alpha-step = 0.06;						# XRender backend: Step size for alpha pictures. Increasing
 										# it may result in less X resource usage,
 										# Yet fading may look bad.
-inactive-dim = 0.3;					# Dim inactive windows. (0.0 - 1.0)
+inactive-dim = 0.0;					# Dim inactive windows. (0.0 - 1.0)
 inactive-dim-fixed = true;			# Do not let dimness adjust based on window opacity.
 # blur-background = true;				# Blur background of transparent windows.
 										# Bad performance with X Render backend.
@@ -122,13 +122,13 @@ blur-background-exclude = [
 #opacity-rule = [ "80:class_g = 'XTerm'" ];
 #opacity-rule = [ "80:class_g = 'UXTerm'" ];
 #opacity-rule = [ "99:class_g = 'VirtualBox'" ];
-opacity-rule = [ "95:class_g = 'URxvt'" ];
+#opacity-rule = [ "95:class_g = 'URxvt'" ];
 
 ####################################
 #######       Fading        ########
 ####################################
-#fading = true;							# Fade windows during opacity changes.
-# fade-delta = 10;						# The time between steps in a fade in milliseconds. (default 10).
+fading = true;							# Fade windows during opacity changes.
+fade-delta = 5;						# The time between steps in a fade in milliseconds. (default 10).
 #fade-in-step = 0.03;					# Opacity change between steps while fading in. (default 0.028).
 #fade-out-step = 0.03;					# Opacity change between steps while fading out. (default 0.03).
 # no-fading-openclose = true;			# Avoid fade windows in/out when opening/closing.
