--- a/vlc/vlc-qt-interface.conf
+++ b/vlc/vlc-qt-interface.conf
@@ -1,20 +1,20 @@
 [General]
 filedialog-path=@Variant(\0\0\0\x11\0\0\0\r/home/valerio)
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\v\x92\0\0\0\x19\0\0\xe\v\0\0\x4\x33\0\0\v\x97\0\0\0\x1e\0\0\xe\x6\0\0\x4.\0\0\0\0\0\0\0\0\a\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x2\0\0\0\0\x6\x9e\0\0\x2\xc9\0\0\xe\x1\0\0\x4\x14\0\0\x6\xa3\0\0\x2\xce\0\0\r\xfc\0\0\x4\xf\0\0\0\0\0\0\0\0\a\x80)
 
 [FullScreen]
-pos=@Point(0 0)
-screen=@Rect(0 0 0 0)
+pos=@Point(2240 1017)
+screen=@Rect(1680 0 1920 1080)
 wide=false
 
 [MainWindow]
 adv-controls=0
-bgSize=@Size(464 970)
+bgSize=@Size(1882 251)
 pl-dock-status=true
 playlist-visible=false
 playlistSize=@Size(-1 -1)
 status-bar-visible=false
 
 [RecentsMRL]
-list=file:///home/valerio/d/Nuova%20cartella/----/4%20teen%20girls%20playing%20with%20many%20dildos%20on%20the%20webcam.flv
-times=0
+list=file:///home/valerio/mediacenter_1tb/MEDIA/TVSeries/Doctor%20Who%20%282005%29/Season%2011/Doctor%20Who%20%282005%29%20-%20S11E05%20-%20The%20Tsuranga%20Conundrum.mkv, file:///home/valerio/mediacenter_1tb/MEDIA/TVSeries/The%20Big%20Bang%20Theory/Season%2012/The%20Big%20Bang%20Theory%20-%20S12E07%20-%20The%20Grant%20Allocation%20Derivation.mkv, file:///home/valerio/mediacenter_1tb/MEDIA/TVSeries/The%20Big%20Bang%20Theory/Season%2012/The%20Big%20Bang%20Theory%20-%20S12E06%20-%20The%20Imitation%20Perturbation.mkv, file:///home/valerio/mediacenter_1tb/MEDIA/Movies/Rogue%20One%20%282016%29/Rogue%20One.mkv, file:///home/valerio/mediacenter_1tb/MEDIA/Movies/Rogue%20One%20A%20Star%20Wars%20Story%20%282016%29/Rogue%20One%20A%20Star%20Wars%20Story%20%282016%29.mkv, file:///home/valerio/mediacenter_1tb/MEDIA/Movies/Deadpool%202016/Deadpool%202016.avi, file:///home/valerio/d/Nuova%20cartella/----/4%20teen%20girls%20playing%20with%20many%20dildos%20on%20the%20webcam.flv
+times=0, 0, 0, 0, 0, 0, 0
