--- a/i3/config
+++ b/i3/config
@@ -168,57 +168,40 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-	position top
-}
+#	 bar {
+#	         status_command i3status
+#	 	position bottom
+#	 }
 
 # disable window title
 for_window [class="^.*"] border pixel 5
 
 #new_window 1pixel
-#smart_borders on
+smart_borders on
 smart_gaps on
-gaps inner 5
+gaps inner 15	 
 gaps outer 0  
 
-# exec ~/.config/scripts/wp.sh
-# set_from_resource $fg i3wm.color7 #f0f0f0
-# set_from_resource $bg i3wm.color2 #f0f0f0
-# set_from_resource $b1 i3wm.color3 #f0f0f0
+# Run to just set the wallpaper
+# exec_always ~/.config/scripts/wp.sh
+# Run to Set the Theme
+exec_always ~/.config/scripts/theme.sh
 
-# class                 border  backgr. text indicator child_border
-# client.focused          $bg	$bg     $fg  $bg       $bg
-# client.focused_inactive $bg     $bg     $fg  $bg       $bg
-# client.unfocused        $b1     $bg     $fg  $bg       $bg
-# client.urgent           $bg     $bg     $fg  $bg       $bg
-# client.placeholder      $bg     $bg     $fg  $bg       $bg
-
- client.background       $bg
- set_from_resource $bg           i3wm.color0 #ff0000
- set_from_resource $bg-alt       i3wm.color14 #ff0000
- set_from_resource $fg           i3wm.color15 #ff0000
- set_from_resource $fg-alt       i3wm.color2 #ff0000
+set_from_resource $bg           i3wm.color0 #ff0000
+set_from_resource $bg-alt       i3wm.color14 #ff0000
+set_from_resource $fg           i3wm.color15 #ff0000
+set_from_resource $fg-alt       i3wm.color2 #ff0000
 set_from_resource $hl           i3wm.color13 #ff0000
 
 # class                 border      backgr. text indicator      child_border
-client.focused          #FF00FF		#0000FF     $hl  #00FF00    #FFFFFF
-client.focused_inactive #000000		$bg     $fg  $fg-alt        $fg-alt
-client.unfocused        #FF0000		$bg     $fg  $fg-alt        $fg-alt
+client.focused          #FF00FF			#0000FF $hl  #00FF00    		#FFFFFF
+client.focused_inactive #000000			$bg     $fg  $fg-alt        #000000
+client.unfocused        #FF0000			$bg     $fg  $fg-alt        #000000
 client.urgent           $fg-alt     $bg     $fg  $fg-alt        $fg-alt
 client.placeholder      $fg-alt     $bg     $fg  $fg-alt        $fg-alt
 
 client.background       $ffffff
 
-# class                 border  backgr. text indicator child_border
-#client.focused          #FFFFFF     #000000     #ffffff  #FFFFFF       #FF00FF
-#client.focused_inactive #000000     #000000     #ffffff  #000000       #000000
-#client.unfocused        #000000     #000000     #ffffff  #000000       #000000
-#client.urgent           #000000     #000000     #ffffff  #000000       #000000
-#client.placeholder      #000000     #000000     #ffffff  #000000       #000000
-#
-#client.background       #000000
-
-# exec_always killall compton
-exec_always /usr/bin/compton 
-
+# exec_always --no-startup-id "sleep 1; killall -q polybar;sleep 10; polybar examplemain; polybar example"
+exec_always --no-startup-id "~/.config/polybar/launch.sh"
+exec_always --no-startup-id "killall -q compton; compton"
