--- a/polybar/config
+++ b/polybar/config
@@ -18,7 +18,10 @@
 
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #222
+; ORIGINAL
+; background = #222222 
+; transparent
+background = #dd000000 
 background-alt = #444
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
@@ -27,14 +30,24 @@ primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
 
-[bar/example]
-;monitor = ${env:MONITOR:HDMI-1}
+;[colors]
+;background = ${xrdb:color0:#222}
+;background-alt = ${xrdb:color1:#222}
+;foreground = ${xrdb:color7:#222}
+;foreground-alt = ${xrdb:color0:#222}
+;primary = ${xrdb:color1:#222}
+;secondary = ${xrdb:color2:#222}
+;alert = ${xrdb:color3:#222}
+
+[bar/examplemain]
+monitor = ${env:MONITOR:DP-0.1}
 width = 100%
 height = 27
+bottom = false
 ;offset-x = 1%
-;offset-y = 1%
-radius = 6.0
-fixed-center = false
+;offset-y = 5%
+radius = 0.0
+fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -42,7 +55,7 @@ foreground = ${colors.foreground}
 line-size = 3
 line-color = #f00
 
-border-size = 4
+border-size = 0
 border-color = #00000000
 
 padding-left = 0
@@ -51,21 +64,21 @@ padding-right = 2
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
+font-0 = terminus:pixelsize=10;1
 font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
+;font-2 = siji:pixelsize=10;1
+font-2 = "Wuncon Siji"
 
-modules-left = bspwm i3
-modules-center = 
-modules-right = filesystem xbacklight alsa pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
-
+modules-left = bspwm date
+modules-center = i3	
+modules-right = filesystem alsa pulseaudio memory cpu temperature powermenu
 tray-position = right
 tray-padding = 2
 ;tray-transparent = true
 ;tray-background = #0063ff
 
 ;wm-restack = bspwm
-;wm-restack = i3
+wm-restack = i3
 
 ;override-redirect = true
 
@@ -103,6 +116,8 @@ type = internal/fs
 interval = 25
 
 mount-0 = /
+mount-1 = /home
+# mount-2 = /home/valerio/mediacenter_1tb
 
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
@@ -128,7 +143,7 @@ label-empty-foreground = ${colors.foreground-alt}
 label-empty-padding = 2
 
 ; Separator in between workspaces
-; label-separator = |
+label-separator = |
 
 [module/i3]
 type = internal/i3
@@ -137,7 +152,7 @@ index-sort = true
 wrapping-scroll = false
 
 ; Only show workspaces on the same output as the bar
-;pin-workspaces = true
+pin-workspaces = true
 
 label-mode-padding = 2
 label-mode-foreground = #000
@@ -261,7 +276,7 @@ format-disconnected =
 type = internal/date
 interval = 5
 
-date =
+date = 
 date-alt = " %Y-%m-%d"
 
 time = %H:%M
@@ -410,14 +425,14 @@ menu-2-1 = cancel
 menu-2-1-exec = menu-open-0
 
 [settings]
-screenchange-reload = true
+;screenchange-reload = true
 ;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
+compositing-background = screen
+compositing-foreground = source
+compositing-border = over
 
 [global/wm]
-margin-top = 5
+margin-top = 0
 margin-bottom = 5
 
 ; vim:ft=dosini
