--- a/i3/config
+++ b/i3/config
@@ -76,9 +76,11 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# bindsym $mod+s layout stacking
+# bindsym $mod+w layout tabbed
+# bindsym $mod+e layout toggle split
+
+bindsym $mod+w exec google-chrome-stable
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -174,6 +176,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 #	 bar {
@@ -182,12 +185,12 @@ bindsym $mod+r mode "resize"
 #	 }
 
 # disable window title
-for_window [class="^.*"] border pixel 5
+for_window [class="^.*"] border pixel 3
 
 #new_window 1pixel
 smart_borders on
 smart_gaps on
-gaps inner 10
+gaps inner 15
 gaps outer 0  
 
 # Run to just set the wallpaper
