--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,9 +17,9 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # Enable mouse control (clickable windows, panes, resizable panes)
-set -g mouse-select-window on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
+# set -g mouse-select-window on
+# set -g mouse-select-pane on
+# set -g mouse-resize-pane on
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
@@ -32,7 +32,7 @@ set-window-option -g monitor-activity off
 set-option -g bell-action none
 #
 # #  modes
-# setw -g clock-mode-colour colour5
+setw -g clock-mode-colour colour5
 # setw -g mode-attr bold
 # setw -g mode-fg colour1
 # setw -g mode-bg colour18
