--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,11 @@
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
@@ -5,6 +13,8 @@ setw -g pane-base-index 1
 # set-option -sg escape-time 30
 
 set -sg escape-time 0
+
+# Prevent window automatic renaming with the executed command
 set-option -g allow-rename off
 
 # reload config file 
@@ -15,6 +25,15 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# switch panes using Alt-hjkl without prefix
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
+bind V split-window -h
+bind H split-window
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 # set -g mouse-select-window on
@@ -31,44 +50,31 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 #
-# #  modes
+
+#  modes
 setw -g clock-mode-colour colour5
-# setw -g mode-attr bold
-# setw -g mode-fg colour1
-# setw -g mode-bg colour18
-#
-# # panes
-# set -g pane-border-bg colour0
-# set -g pane-border-fg colour19
-# set -g pane-active-border-bg colour0
-# set -g pane-active-border-fg colour9
-#
+# setw -g mode-style 'fg=colour1 bg=colour18 bold'
+
+# panes
+# set -g pane-border-style 'fg=colour19 bg=colour0'
+# set -g pane-active-border-style 'bg=colour0 fg=colour9'
+# 
 # # statusbar
 # set -g status-position bottom
 # set -g status-justify left
-# set -g status-bg colour18
-# set -g status-fg colour137
-# set -g status-attr dim
+# set -g status-style 'bg=colour18 fg=colour137 dim'
 # set -g status-left ''
-# set -g status-right '#[fg=colour233,bg=colour19,bold] %d/%m #[fg=colour233,bg=colour8,bold] %H:%M:%S '
+# set -g status-right '#[fg=colour233,bg=colour19] %d/%m #[fg=colour233,bg=colour8] %H:%M:%S '
 # set -g status-right-length 50
 # set -g status-left-length 20
-#
-# setw -g window-status-current-fg colour1
-# setw -g window-status-current-bg colour19
-# setw -g window-status-current-attr bold
+# 
+# setw -g window-status-current-style 'fg=colour1 bg=colour19 bold'
 # setw -g window-status-current-format ' #I#[fg=colour249]:#[fg=colour255]#W#[fg=colour249]#F '
-#
-# setw -g window-status-fg colour9
-# setw -g window-status-bg colour18
-# setw -g window-status-attr none
+# 
+# setw -g window-status-style 'fg=colour9 bg=colour18'
 # setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-#
-# setw -g window-status-bell-attr bold
-# setw -g window-status-bell-fg colour255
-# setw -g window-status-bell-bg colour1
-#
+# 
+# setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
+# 
 # # messages
-# set -g message-attr bold
-# set -g message-fg colour232
-# set -g message-bg colour16
+# set -g message-style 'fg=colour232 bg=colour16 bold'
