--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,6 +32,12 @@ bind -n M-j select-pane -D
 bind V split-window -h
 bind H split-window
 
+#Resizing panes:
+bind -r j resize-pane -D 2
+bind -r k resize-pane -U 2
+bind -r h resize-pane -L 2
+bind -r l resize-pane -R 2
+
 # Enable mouse control (clickable windows, panes, resizable panes)
 # set -g mouse-select-window on
 # set -g mouse-select-pane on
@@ -46,3 +52,74 @@ set -g visual-bell off
 set -g visual-silence off
 setw -g monitor-activity off
 set -g bell-action none
+
+
+# set inactive/active window styles
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour255,bg=colour234'
+#  
+#  #pane border
+#  set -g pane-border-bg colour235
+#  set -g pane-border-fg colour238
+#  set -g pane-active-border-bg colour236
+#  set -g pane-active-border-fg colour51
+
+# Open window in current path 
+bind c new-window -c '#{pane_current_path}'
+
+
+#-------------------------------------------------------#
+# STATUS LINE/TOOLBAR AT BOTTOM OF SCREEN
+#-------------------------------------------------------#
+ 
+# Set background of status line to black
+#-------------------------------------------------------#
+set -g status-bg black
+
+
+#Colours for messages
+#-------------------------------------------------------#
+# enable activity alerts
+setw -g monitor-activity on
+set -g visual-activity on
+
+#Show reloaded message in bright white
+set -g message-fg white
+set -g message-bg default
+set -g message-attr bright
+#-------------------------------------------------------#
+
+
+# Status line left side
+#-------------------------------------------------------#
+# Session: 0 1 1 settings
+# set -g status-left-length 40 
+# set -g status-left "#[fg=colour245]Session: #S #[fg=colour84]#I #[fg=colour75]#P"
+#-------------------------------------------------------#
+
+
+#Window/pane type in centre
+#-------------------------------------------------------#
+#move bash* to centre
+set -g status-justify centre
+
+# set the color of the window list (name of the pane)
+setw -g window-status-fg colour75
+setw -g window-status-bg colour255 
+setw -g window-status-attr dim
+#-------------------------------------------------------#
+
+
+#Time and date on right-hand side
+#-------------------------------------------------------#
+# Status line right side
+# e.g. 28 Nov 18:15
+set -g status-right "#[fg=colour245]%d %b #[fg=colour256] %R"
+
+# Update the status bar every sixty seconds (for the time)
+set -g status-interval 60
+#-------------------------------------------------------#
+
+#-------------------------------------------------------#
+#END OF STATUS LINE MESSAGES
+#-------------------------------------------------------#
