--- a/.tmux.conf
+++ b/.tmux.conf
@@ -101,12 +101,14 @@ set -g message-attr bright
 #Window/pane type in centre
 #-------------------------------------------------------#
 #move bash* to centre
-set -g status-justify centre
+set -g status-justify left
 
 # set the color of the window list (name of the pane)
-setw -g window-status-fg colour75
-setw -g window-status-bg colour255 
+setw -g window-status-fg colour255
+# setw -g window-status-bg colour75 
 setw -g window-status-attr dim
+set-window-option -g window-status-current-bg colour255
+set-window-option -g window-status-current-fg colour25
 #-------------------------------------------------------#
 
 
@@ -114,7 +116,7 @@ setw -g window-status-attr dim
 #-------------------------------------------------------#
 # Status line right side
 # e.g. 28 Nov 18:15
-set -g status-right "#[fg=colour245]%d %b #[fg=colour256] %R"
+set -g status-right "#[fg=colour245]%d %b #[fg=colour256] %R "
 
 # Update the status bar every sixty seconds (for the time)
 set -g status-interval 60
