Tmux Fixed Colors, VIM added tablemode and emmet

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,8 +55,8 @@ set -g bell-action none
 
 
 # set inactive/active window styles
-set -g window-style 'fg=colour247,bg=colour236'
-set -g window-active-style 'fg=colour255,bg=colour234'
+# set -g window-style 'fg=colour247,bg=colour236'
+# set -g window-active-style 'fg=colour255,bg=colour234'
 #  
 #  #pane border
 #  set -g pane-border-bg colour235
