--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,7 +12,7 @@ setw -g pane-base-index 1
 
 # set-option -sg escape-time 30
 
-set -sg escape-time 0
+set -sg escape-time 10
 
 # Prevent window automatic renaming with the executed command
 set-option -g allow-rename off
@@ -125,3 +125,21 @@ set -g status-interval 60
 #-------------------------------------------------------#
 #END OF STATUS LINE MESSAGES
 #-------------------------------------------------------#
+
+
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'egel/tmux-gruvbox'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
+
