--- a/.tmux.conf
+++ b/.tmux.conf
@@ -141,5 +141,5 @@ set -g @plugin 'egel/tmux-gruvbox'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+run -b '~/.config/.tmux/plugins/tpm/tpm'
 
