--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,7 +74,7 @@ bind c new-window -c '#{pane_current_path}'
  
 # Set background of status line to black
 #-------------------------------------------------------#
-set -g status-bg black
+# set -g status-bg black
 
 
 #Colours for messages
@@ -101,14 +101,14 @@ set -g message-attr bright
 #Window/pane type in centre
 #-------------------------------------------------------#
 #move bash* to centre
-set -g status-justify left
+# set -g status-justify left
 
 # set the color of the window list (name of the pane)
-setw -g window-status-fg colour255
+# setw -g window-status-fg colour255
 # setw -g window-status-bg colour75 
-setw -g window-status-attr dim
-set-window-option -g window-status-current-bg colour255
-set-window-option -g window-status-current-fg colour25
+# setw -g window-status-attr dim
+# set-window-option -g window-status-current-bg colour255
+# set-window-option -g window-status-current-fg colour25
 #-------------------------------------------------------#
 
 
@@ -116,7 +116,7 @@ set-window-option -g window-status-current-fg colour25
 #-------------------------------------------------------#
 # Status line right side
 # e.g. 28 Nov 18:15
-set -g status-right "#[fg=colour245]%d %b #[fg=colour256] %R "
+# set -g status-right "#[fg=colour245]%d %b #[fg=colour256] %R "
 
 # Update the status bar every sixty seconds (for the time)
 set -g status-interval 60
@@ -131,14 +131,13 @@ set -g status-interval 60
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "arcticicestudio/nord-tmux"
 
-# set -g @plugin "arcticicestudio/nord-tmux"
-set -g @plugin 'egel/tmux-gruvbox'
+# VIM TMUX NAVIGATION WITH CTRL-HJKL
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
+set -g @plugin "arcticicestudio/nord-tmux"
+# set -g @plugin 'egel/tmux-gruvbox'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.config/.tmux/plugins/tpm/tpm'
