Some other Changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,12 +83,7 @@ bind c new-window -c '#{pane_current_path}'
 setw -g monitor-activity on
 set -g visual-activity on
 
-#Show reloaded message in bright white
-set -g message-fg white
-set -g message-bg default
-set -g message-attr bright
-#-------------------------------------------------------#
-
+set-option -g status-position top
 
 # Status line left side
 #-------------------------------------------------------#
